--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!-- Github pages need the index file in main folder while flask need the index file in the templates folder -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 
